--- a/experiments/gtfs-linking/mapping.yml
+++ b/experiments/gtfs-linking/mapping.yml
@@ -44,3 +44,20 @@ mappings:
                           - [sql:valueParameter, $(stop_name)]
                     - [sql:valueParameter2, ' ']
                     - [sql:valueParameter3, '-'] 
+  tramstops:
+    source:
+      - [tramstops.csv~csv]
+    s: http://linkedgtfs.com/madrid/train/stops/$(stop_id)
+    po: 
+      - [a, gtfs:stop]
+      - [gtfs:code, $(stop_code)]
+      - [foaf:name, $(stop_name)]
+      - [dct:description, $(stop_desc)]
+      - [geo:lat, $(stop_lat)]
+      - [geo:long, $(stop_lon)]
+      - [gtfs:zone, $(zone_id)]
+      - [foaf:page, $(stop_url)]
+      - [gtfs:locationType, $(location_type)]
+      - [gtfs:parentStation, $(parent_station)]
+      - [gtfs:timeZone, $(stop_timezone)]
+      - [gtfs:weelchairAccessible, $(weelchair_boarding)]
