--- a/motivating-example/config/config-motivating-example.json
+++ b/motivating-example/config/config-motivating-example.json
@@ -1,8 +1,8 @@
 {
   "sources":[
     {
-      "csvw":"../mappings/motivating-example-annotations.csvw.json",
-      "yarrrml": "../mappings/motivating-example.yml"
+      "csvw":"https://raw.githubusercontent.com/oeg-upm/morph-csv/master/motivating-example/mappings/motivating-example-annotations.csvw.json",
+      "yarrrml": "https://raw.githubusercontent.com/oeg-upm/morph-csv/master/motivating-example/mappings/motivating-example.yml"
     }
   ]
 }
