--- a/pom.xml
+++ b/pom.xml
@@ -47,15 +47,16 @@
       <version></version>
     </dependency>
     -->
+    <!-- https://mvnrepository.com/artifact/com.univocity/univocity-parsers -->
+    <dependency>
+      <groupId>com.univocity</groupId>
+      <artifactId>univocity-parsers</artifactId>
+      <version>2.8.1</version>
+    </dependency>
     <dependency>
       <groupId>commons-cli</groupId>
       <artifactId>commons-cli</artifactId>
       <version>1.4</version>
-    </dependency>
-    <dependency>
-      <groupId>com.opencsv</groupId>
-      <artifactId>opencsv</artifactId>
-      <version>4.5</version>
     </dependency>
     <!-- https://mvnrepository.com/artifact/org.scala-lang/scala-library -->
     <dependency>
@@ -75,8 +76,6 @@
       <artifactId>scala-compiler</artifactId>
       <version>2.11.12</version>
     </dependency>
-
-
     <dependency>
       <groupId>com.h2database</groupId>
       <artifactId>h2</artifactId>
@@ -138,7 +137,7 @@
       <artifactId>morph-rdb</artifactId>
       <version>3.9.15</version>
       <scope>system</scope>
-      <systemPath>${basedir}/lib/morph-rdb.jar</systemPath>
+      <systemPath>${pom.basedir}/lib/morph-rdb.jar</systemPath>
     </dependency>
 
     <dependency>
@@ -146,7 +145,7 @@
       <artifactId>rmlc-api-jena-binding</artifactId>
       <version>1.5.1</version>
       <scope>system</scope>
-      <systemPath>${basedir}/lib/rmlc-api-jena-binding-1.5.1.jar</systemPath>
+      <systemPath>${pom.basedir}/lib/rmlc-api-jena-binding-1.5.1.jar</systemPath>
     </dependency>
 
     <dependency>
@@ -154,7 +153,7 @@
       <artifactId>rmlc-api-core</artifactId>
       <version>1.5.1</version>
       <scope>system</scope>
-      <systemPath>${basedir}/lib/rmlc-api-core-1.5.1.jar</systemPath>
+      <systemPath>${pom.basedir}/lib/rmlc-api-core-1.5.1.jar</systemPath>
     </dependency>
 
   </dependencies>
@@ -172,10 +171,6 @@
           <version>3.0.2</version>
         </plugin>
         <plugin>
-          <artifactId>maven-compiler-plugin</artifactId>
-          <version>3.7.0</version>
-        </plugin>
-        <plugin>
           <artifactId>maven-surefire-plugin</artifactId>
           <version>2.20.1</version>
         </plugin>
@@ -191,30 +186,28 @@
           <artifactId>maven-deploy-plugin</artifactId>
           <version>2.8.2</version>
         </plugin>
+        <plugin>
+          <groupId>org.apache.maven.plugins</groupId>
+          <artifactId>maven-compiler-plugin</artifactId>
+          <configuration>
+            <source>8</source>
+            <target>8</target>
+          </configuration>
+        </plugin>
+        <plugin>
+          <artifactId>maven-assembly-plugin</artifactId>
+          <configuration>
+            <archive>
+              <manifest>
+                <mainClass>es.upm.fi.dia.oeg.Morphcsv</mainClass>
+              </manifest>
+            </archive>
+            <descriptorRefs>
+              <descriptorRef>jar-with-dependencies</descriptorRef>
+            </descriptorRefs>
+          </configuration>
+        </plugin>
       </plugins>
     </pluginManagement>
-    <plugins>
-      <plugin>
-        <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-compiler-plugin</artifactId>
-        <configuration>
-          <source>8</source>
-          <target>8</target>
-        </configuration>
-      </plugin>
-      <plugin>
-        <artifactId>maven-assembly-plugin</artifactId>
-        <configuration>
-          <archive>
-            <manifest>
-              <mainClass>es.upm.fi.dia.oeg.Morphcsv</mainClass>
-            </manifest>
-          </archive>
-          <descriptorRefs>
-            <descriptorRef>jar-with-dependencies</descriptorRef>
-          </descriptorRefs>
-        </configuration>
-      </plugin>
-    </plugins>
   </build>
 </project>
