--- a/pom.xml
+++ b/pom.xml
@@ -35,6 +35,15 @@
       <version>4.11</version>
       <scope>test</scope>
     </dependency>
+    <!-- https://mvnrepository.com/artifact/org.apache.jena/jena -->
+    <!-- https://mvnrepository.com/artifact/org.apache.jena/jena-core -->
+    <dependency>
+      <groupId>org.apache.jena</groupId>
+      <artifactId>jena-core</artifactId>
+      <version>3.7.0</version>
+    </dependency>
+
+
     <dependency>
       <groupId>org.json</groupId>
       <artifactId>json</artifactId>
