--- a/pom.xml
+++ b/pom.xml
@@ -44,13 +44,15 @@
       <version>4.11</version>
       <scope>test</scope>
     </dependency>
-    <!-- https://mvnrepository.com/artifact/org.apache.jena/jena -->
-    <!-- https://mvnrepository.com/artifact/org.apache.jena/jena-core -->
+
+
+    <!-- https://mvnrepository.com/artifact/org.apache.jena/jena-arq -->
     <dependency>
       <groupId>org.apache.jena</groupId>
-      <artifactId>jena-core</artifactId>
+      <artifactId>jena-arq</artifactId>
       <version>3.7.0</version>
     </dependency>
+
 
 
     <dependency>
