--- a/evaluation/transport-performance/configs/config-gtfs.json
+++ b/evaluation/transport-performance/configs/config-gtfs.json
@@ -2,7 +2,8 @@
   "sources":[
     {
       "csvw":"./evaluation/transport-performance/mappings/gtfs-annotations.json",
-      "yarrrml": "./evaluation/transport-performance/mappings/gtfs.yml"
+      "yarrrml": "./evaluation/transport-performance/mappings/gtfs.yml",
+      "db": "gtfs"
     }
   ]
 }
