--- a/evaluation/transport-performance/mappings/gtfs.yml
+++ b/evaluation/transport-performance/mappings/gtfs.yml
@@ -1,7 +1,6 @@
 prefixes:
   rr: http://www.w3.org/ns/r2rml#
   foaf: http://xmlns.com/foaf/0.1/
-  ex: http://example.com/
   xsd: http://www.w3.org/2001/XMLSchema#
   rdfs: http://www.w3.org/2000/01/rdf-schema#
   dc: http://purl.org/dc/elements/1.1/
@@ -17,16 +16,16 @@ prefixes:
 mappings:
   stoptimes:
     sources:
-      - [gtfs/stop_times.csv~csv]
-    s: http://linkedgtfs.com/CITY/stoptimes/$(trip_id)-$(stop_id)-$(arrival_time)
+      - [./evaluation/transport-performance/data/STOP_TIMES.csv~csv]
+    s: http://transport.linkeddata.es/madrid/metro/stoptimes/$(trip_id)-$(stop_id)-$(arrival_time)
     po:
       - [a, gtfs:StopTime]
-      - [gtfs:arrivalTime, $(arrival_time)]
-      - [gtfs:departureTime, $(departure_time)]
-      - [gtfs:stopSequence, $(stop_sequence)]
+      - [gtfs:arrivalTime, $(arrival_time),xsd:duration]
+      - [gtfs:departureTime, $(departure_time),xsd:duration]
+      - [gtfs:stopSequence, $(stop_sequence),xsd:integer]
       - [gtfs:headsign, $(stop_headsign)]
-      - [gtfs:pickupType, http://vocab.gtfs.org/terms#PickupType=$(pickup_type)]
-      - [gtfs:dropOffType, http://vocab.gtfs.org/terms#DropOffType=$(drop_off_type)]
+      - [gtfs:pickupType, http://transport.linkeddata.es/resource/PickupType/$(pickup_type)~iri]
+      - [gtfs:dropOffType, http://transport.linkeddata.es/resource/DropOffType/$(drop_off_type)~iri]
       - [gtfs:distanceTraveled, $(shape_dist_traveled)]
       - p: gtfs:trip
         o:
@@ -46,24 +45,24 @@ mappings:
                 - [str2, $(stop_id)]
   trips:
     sources:
-      - [gtfs/trips.csv~csv]
-    s: http://linkedgtfs.com/CITY/trips/$(trip_id)
+      - [./evaluation/transport-performance/data/TRIPS.csv~csv]
+    s: http://transport.linkeddata.es/madrid/metro/trips/$(trip_id)
     po:
       - [a, gtfs:Trip]
       - [gtfs:headsign, $(trip_headsign)]
       - [gtfs:shortName, $(trip_short_name)]
       - [gtfs:direction, $(direction_id)]
       - [gtfs:block, $(block_id)]
-      - [gtfs:wheelchairAccessible, $(wheelchair_accesible)]
+      - [gtfs:wheelchairAccessible,http://transport.linkeddata.es/resource/WheelchairBoardingStatus/$(wheelchair_accessible)~iri]
       - p: gtfs:service
         o:
-          - mapping: services
+          - mapping: services1
             condition:
               function: equal
               parameters:
                 - [str1, $(service_id)]
                 - [str2, $(service_id)]
-          - mapping: services_dates
+          - mapping: services2
             condition:
               function: equal
               parameters:
@@ -87,17 +86,17 @@ mappings:
                 - [str2, $(shape_id)]
   routes:
     sources:
-      - [gtfs/routes.csv~csv]
-    s: http://linkedgtfs.com/CITY/routes/$(route_id)
+      - [./evaluation/transport-performance/data/ROUTES.csv~csv]
+    s: http://transport.linkeddata.es/madrid/metro/routes/$(route_id)
     po:
       - [a, gtfs:Route]
       - [gtfs:shortName, $(route_short_name)]
       - [gtfs:longName, $(route_long_name)]
       - [dct:description, $(route_desc)]
-      - [gtfs:routeType, http://vocab.gtfs.org/terms#RouteType=$(route_type)]
-      - [gtfs:routeUrl, $(route_url)]
+      - [gtfs:routeType, http://transport.linkeddata.es/resource/RouteType/$(route_type)~iri]
+      - [gtfs:routeUrl, $(route_url)~iri]
       - [gtfs:color, $(route_color)]
-      - [gtfs:textColor, $(gtfs:textColor)]
+      - [gtfs:textColor, $(route_text_color)]
       - p: gtfs:agency
         o:
           - mapping: agency
@@ -108,87 +107,124 @@ mappings:
                 - [str2, $(agency_id)]
   agency:
     sources:
-      - [gtfs/agency.csv~csv]
-    s: http://linkedgtfs.com/CITY/agency/$(agency_id)
+      - [./evaluation/transport-performance/data/AGENCY.csv~csv]
+    s: http://transport.linkeddata.es/madrid/agency/$(agency_id)
     po:
       - [a, gtfs:Agency]
-      - [foaf:page, $(agency_url)]
+      - [foaf:page, $(agency_url)~iri]
       - [foaf:name,$(agency_name)]
       - [gtfs:timeZone,$(agency_timezone)]
       - [dct:language,$(agency_lang)]
       - [foaf:phone,$(agency_phone)]
-      - [gtfs:fareUrl,$(agency_fare_url)]
+      - [gtfs:fareUrl,$(agency_fare_url)~iri]
   stops:
     sources:
-      - [gtfs/stops.csv~csv]
-    s: http://linkedgtfs.com/CITY/stops/$(stop_id)
+      - [./evaluation/transport-performance/data/STOPS.csv~csv]
+    s: http://transport.linkeddata.es/madrid/metro/stops/$(stop_id)
     po:
       - [a,gtfs:Stop]
       - [gtfs:code,$(stop_code)]
+      - [dct:identifier,$(stop_id)]
       - [foaf:name,$(stop_name)]
       - [dct:description,$(stop_desc)]
-      - [geo:lat,$(stop_lat)]
-      - [geo:long,$(stop_long)]
+      - [geo:lat,$(stop_lat),xsd:double]
+      - [geo:long,$(stop_lon),xsd:double]
       - [gtfs:zone,$(zone_id)]
-      - [foaf:page,$(stop_url)]
-      - [gtfs:locationType,$(location_type)]
-      - [gtfs:parentStation,$(parent_station)]
+      - [foaf:page,$(stop_url)~iri]
+      - [gtfs:locationType,http://transport.linkeddata.es/resource/LocationType/$(location_type)~iri]
       - [gtfs:timeZone,$(stop_timezone)]
-      - [gtfs:weelchairAccessible,$(wheelchair_boarding)]
-  services_dates:
+      - [gtfs:wheelchairAccessible,http://transport.linkeddata.es/resource/WheelchairBoardingStatus/$(wheelchair_boarding)~iri]
+      - p: gtfs:parentStation
+        o:
+          - mapping: stops
+            condition:
+              function: equal
+              parameters:
+                - [str1, $(parent_station)]
+                - [str2, $(stop_id)]
+  services1:
     sources:
-      - [gtfs/calendar_dates.csv~csv]
-    s: http://linkedgtfs.com/CITY/services_dates/$(service_id)-$(date)
-    po:
-      - [a, gtfs:ServiceDates]
-      - [gtfs:service, $(service_id)]
-      - [dct:date, $(date)]
-      - [gtfs:dateAddition, $(exeception_type)]
-  services:
-    sources:
-      - [gtfs/calendar.csv~csv]
-    s: http://linkedgtfs.com/CITY/service/$(service_id)
+      - [./evaluation/transport-performance/data/CALENDAR.csv~csv]
+    s: http://transport.linkeddata.es/madrid/metro/services/$(service_id)
     po:
       - [a, gtfs:Service]
-      - [gtfs:monday, $(monday)]
-      - [gtfs:tuesday, $(tuesday)]
-      - [gtfs:wednesday, $(wednesday)]
-      - [gtfs:thursday, $(thursday)]
-      - [gtfs:friday, $(friday)]
-      - [gtfs:saturday, $(saturday)]
-      - [gtfs:sunday, $(sunday)]
-      - [schema:startDate, $(start_date)]
-      - [schema:endDate, $(end_date)]
+      - p: gtfs:serviceRule
+        o:
+          - mapping: calendar_rules
+            condition:
+              function: equal
+              parameters:
+                - [str1, $(service_id)]
+                - [str2, $(service_id)]
+  services2:
+    sources:
+      - [./evaluation/transport-performance/data/CALENDAR_DATES.csv~csv]
+    s: http://transport.linkeddata.es/madrid/metro/services/$(service_id)
+    po:
+      - [a, gtfs:Service]
+      - p: gtfs:serviceRule
+        o:
+          - mapping: calendar_date_rules
+            condition:
+              function: equal
+              parameters:
+                - [str1, $(service_id)]
+                - [str2, $(service_id)]
+  calendar_date_rules:
+    sources:
+      - [./evaluation/transport-performance/data/CALENDAR_DATES.csv~csv]
+    s: http://transport.linkeddata.es/madrid/metro/calendar_date_rule/$(service_id)-$(date)
+    po:
+      - [a, gtfs:CalendarDateRule]
+      - [dct:date, $(date), xsd:date]
+      - [gtfs:dateAddition, $(exception_type), xsd:boolean]
+  calendar_rules:
+    sources:
+      - [./evaluation/transport-performance/data/CALENDAR.csv~csv]
+    s: http://transport.linkeddata.es/madrid/metro/calendar_rules/$(service_id)
+    po:
+      - [a, gtfs:CalendarRule]
+      - [gtfs:monday, $(monday), xsd:boolean]
+      - [gtfs:tuesday, $(tuesday), xsd:boolean]
+      - [gtfs:wednesday, $(wednesday), xsd:boolean]
+      - [gtfs:thursday, $(thursday), xsd:boolean]
+      - [gtfs:friday, $(friday), xsd:boolean]
+      - [gtfs:saturday, $(saturday), xsd:boolean]
+      - [gtfs:sunday, $(sunday), xsd:boolean]
+      - [schema:startDate, $(start_date), xsd:date]
+      - [schema:endDate, $(end_date), xsd:date]
   feed:
     sources:
-      - [gtfs/feed_info.csv~csv]
-    s: http://linkedgtfs.com/CITY/feed/$(feed_publisher_name)
+      - [./evaluation/transport-performance/data/FEED_INFO.csv~csv]
+    s: http://transport.linkeddata.es/madrid/metro/feed/$(feed_publisher_name)
     po:
+      - [a, gtfs:Feed]
       - [dct:publisher,$(feed_publisher_name)]
-      - [foaf:page,$(feed_published_url)]
+      - [foaf:page,$(feed_published_url)~iri]
       - [dct:language,$(feed_lang)]
-      - [schema:startDate,$(feed_start_date)]
-      - [schema:endDate,$(feed_end_date)]
+      - [schema:startDate,$(feed_start_date), xsd:date]
+      - [schema:endDate,$(feed_end_date), xsd:date]
       - [schema:version,$(feed_version)]
   shapes:
     sources:
-      - [gtfs/shapes.csv~csv]
-    s: http://linkedgtfs.com/CITY/shape/$(shape_id)
+      - [./evaluation/transport-performance/data/SHAPES.csv~csv]
+    s: http://transport.linkeddata.es/madrid/metro/shape/$(shape_id)-$(shape_pt_sequence)
     po:
-      - [geo:lat,$(shape_pt_lat)]
-      - [geo:long,$(shape_pt_lon)]
+      - [a, gtfs:Shape]
+      - [geo:lat,$(shape_pt_lat),xsd:double]
+      - [geo:long,$(shape_pt_lon),xsd:double]
       - [gtfs:pointSequence,$(shape_pt_sequence)]
       - [gtfs:distanceTraveled,$(shape_dist_traveled)]
   frequencies:
     sources:
-      - [gtfs/frequencies.csv~csv]
-    s: http://linkedgtfs.com/CITY/frequency/$(trip_id)-$(start_time)
+      - [./evaluation/transport-performance/data/FREQUENCIES.csv~csv]
+    s: http://transport.linkeddata.es/madrid/metro/frequency/$(trip_id)-$(start_time)
     po:
       - [a, gtfs:Frequency]
       - [gtfs:startTime,$(start_time)]
       - [gtfs:endTime,$(end_time)]
-      - [gtfs:headwaySeconds,$(headway_secs)]
-      - [gtfs:exactTimes,$(exact_times)]
+      - [gtfs:headwaySeconds,$(headway_secs),xsd:integer]
+      - [gtfs:exactTimes,$(exact_times),xsd:boolean]
       - p: gtfs:trip
         o:
           - mapping: trips
