--- a/pom.xml
+++ b/pom.xml
@@ -35,6 +35,7 @@
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <maven.compiler.source>1.7</maven.compiler.source>
     <maven.compiler.target>1.7</maven.compiler.target>
+    <ontop.version>3.0.0</ontop.version>
   </properties>
 
   <dependencies>
@@ -72,6 +73,16 @@
       <groupId>com.univocity</groupId>
       <artifactId>univocity-parsers</artifactId>
       <version>2.8.1</version>
+    </dependency>
+    <dependency>
+      <groupId>it.unibz.inf.ontop</groupId>
+      <artifactId>ontop-rdf4j</artifactId>
+      <version>${ontop.version}</version>
+    </dependency>
+    <dependency>
+      <groupId>it.unibz.inf.ontop</groupId>
+      <artifactId>ontop-system-sql-owlapi</artifactId>
+      <version>${ontop.version}</version>
     </dependency>
     <dependency>
       <groupId>commons-cli</groupId>
@@ -121,6 +132,16 @@
       <artifactId>slf4j-log4j12</artifactId>
       <version>1.7.25</version>
     </dependency>
+    <dependency>
+      <groupId>com.fasterxml.jackson.core</groupId>
+      <artifactId>jackson-databind</artifactId>
+      <version>2.9.9</version>
+    </dependency>
+    <dependency>
+      <groupId>com.fasterxml.jackson.dataformat</groupId>
+      <artifactId>jackson-dataformat-yaml</artifactId>
+      <version>2.9.9</version>
+    </dependency>
 
     <dependency>
       <groupId>org.apache.commons</groupId>
@@ -149,8 +170,8 @@
     </dependency>
     <dependency>
       <groupId>com.github.morph-csv</groupId>
-      <artifactId>rmlfno2rmlc</artifactId>
-      <version>v0.8.1</version>
+      <artifactId>yarrrml2rmlc</artifactId>
+      <version>v0.8.2</version>
     </dependency>
     <dependency>
       <groupId>es.upm.fi.dia.oeg.morph</groupId>
